<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cristiano.activityinterna.ConverterActivity" >

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/view2"/>
    
    <TextView
        android:id="@+id/txtTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digitetemp"
        android:labelFor="@+id/numero1" />

	<EditText 
	    android:id="@+id/numero1"
	    android:layout_width="180dp"
	    android:layout_height="wrap_content"
	    android:inputType="numberDecimal">
	    
	    <requestFocus />
	    
	</EditText>
	 
	<Button
	    android:id="@+id/btnConverter"
	    android:layout_width="135dp"
	    android:layout_height="wrap_content"
	    android:text="@string/converter" />
	
	<Button
	    android:id="@+id/btnLimpar"
	    android:layout_width="135dp"
	    android:layout_height="wrap_content"
	    android:text="@string/limpar" />
	
	
    
</LinearLayout>